tests/errors/generic_union_member_out_of_scope_var.dang
# A union member binds a type variable not in the union's params.

type Lft[a] {
  pub value: a
}

union Bad[a] = Lft[c]
